fixed overflow issue. website is fully fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
   background-color: rgb(78, 78, 78); 
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: inherit;
 }
 
 img#logo {
